<resources>
    <string name="app_name">Edu Smart</string>
    <string name="menu_1">Home</string>
    <string name="menu_2">Materi</string>
    <string name="menu_3">Absensi</string>
    <string name="menu_4">Konsultasi</string>
    <string name="login_1">Mulai</string>
    <string name="login_2">Siswa</string>
    <string name="login_3">Username :</string>
    <string name="login_4">Masukkan Username</string>
    <string name="login_5">Password :</string>
    <string name="login_6">Masukkan Password</string>
    <string name="login_7">Lupa Password ?</string>
    <string name="login_8">Hubungi Sekolah</string>
    <string name="login_9">Login</string>
    <string name="login_10">Belum punya akun?</string>
    <string name="login_11">Reset</string>
    <string name="login_12">Orang Tua</string>

    <string name="home_1">Nilai</string>
    <string name="home_2">Absensi</string>
    <string name="home_3">Libur</string>
    <string name="home_4">Izin</string>
    <string name="home_5">Sakit</string>
    <string name="home_6">Alfa</string>
    <string name="home_7">V</string>
    <string name="ebook_description">Deskripsi gambar eBook.</string>



    <string name="nilai_1">B. Indonesia</string>
    <string name="nilai_2">Biologi</string>
    <string name="nilai_3">Matematika</string>
    <string name="nilai_4">Fisika</string>
    <string name="nilai_5">Kimia</string>
    <string name="nilai_6">B. Inggris</string>
    <string name="nilai_7">Jasmani</string>
    <string name="nilai_8">B. Perancis</string>
    <string name="nilai_a">88</string>


    <string name="chat_1">Biologi</string>
    <string name="chat_2">Biologi</string>
    <string name="chat_3">Anne Anindhita, S.Pd</string>
    <string name="chat_4">Nita Aryani, S.Pd</string>
    <string name="chat_5">Titi Setiawati, S.Pd</string>
    <string name="chat_6">Dadi, S.Pd</string>
    <string name="chat_7">Elin Kusmayati, S.Pd</string>
    <string name="chat_8">Yeni Nuryeni, S.Pd</string>
    <string name="chat_9">Risma Puji, S.Pd</string>
    <string name="chat_10">Cari</string>


    <string name="scan_1">Nanda Aprillia Lestari</string>
    <string name="scan_2">20210810159</string>
    <string name="scan_3">Pastikan QR Code terlihat dengan jelas dan lensa kamera anda bersih untuk scanning absen</string>
    <string name="scan_4">Scan QR</string>


    //description
    <string name="desc_1">Branding Logo Edu Smart</string>
    <string name="desc_2">Notifikasi</string>
    <string name="desc_3">Foto Profil</string>
    <string name="desc_4">Lampu orange</string>
    <string name="desc_5">Siswa atau Mahasiswa membawa tas dan buku</string>
    <string name="desc_6">Logo Edu Smart</string>
    <string name="desc_7">Persegi Panjang berwarna orange</string>
    <string name="desc_8">Persegi Panjang berwarna biru</string>
    <string name="desc_9">Persegi Panjang berwarna putih</string>
    <string name="desc_10">Kamera</string>
    <string name="desc_11">Dokumen</string>
    <string name="desc_12">Kirim</string>
    <string name="desc_13">Pesan Suara</string>

    <string name="r_tugas1">Biologi</string>
    <string name="r_tugas2">Bab 1</string>
    <string name="r_tugas3">Bab 2</string>
    <string name="r_tugas4">Bab 3</string>
    <string name="r_tugas5">Bab 4</string>
    <string name="isi1">Tugas 1</string>
    <string name="isi2">Tugas 2</string>
    <string name="isi3">Tugas 3</string>
    <string name="item_label">Items</string>
    <string name="label">Items</string>
    <!--    <string-array name="feelings">-->
    <!--        <item>Sad</item>-->
    <!--        <item>Dissatisfied</item>-->
    <!--        <item>Satisfied</item>-->
    <!--        <item>Happy</item>-->
    <!--        <item>Excited</item>-->
    <!--    </string-array>-->
    <string-array name="programming_languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>CPP</item>
    </string-array>

    <!--    <string name="select_bab">Pilih Bab</string>-->
    <!--    <string name="select_tugas">Pilih Tugas</string>-->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="hello_blank_fragment3">Hello blank fragment3</string>
    <string name="hello_blank_fragment4">Hello blank fragment4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>