<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    tools:context=".LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_edusmart"
        />

    <ImageView
        android:id="@+id/img_login2"
        android:layout_width="128dp"
        android:layout_height="125dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/desc_6"
        android:elevation="1dp"
        android:src="@drawable/logo_edusmart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/opensans"
        android:text="@string/login_2"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login2" />

    <TextView
        android:id="@+id/text_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:text="@string/login_3"
        android:textSize="18sp"
        android:fontFamily="@font/opensans"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login1" />

    <EditText
        android:id="@+id/etext_login1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/login_4"
        android:fontFamily="@font/opensans"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/text_login2"
        app:layout_constraintTop_toBottomOf="@+id/text_login1"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/text_login3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/login_5"
        android:textSize="18sp"
        android:fontFamily="@font/opensans"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login2" />

    <EditText
        android:id="@+id/etext_login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/login_6"
        android:fontFamily="@font/opensans"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/text_login3"
        app:layout_constraintTop_toBottomOf="@+id/etext_login1"
        android:importantForAutofill="no"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/text_login4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:text="@string/login_7"
        android:textSize="13sp"
        android:fontFamily="@font/opensans"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etext_login2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_1"
        android:backgroundTint="#0B5DEC"
        android:text="@string/login_9"
        android:fontFamily="@font/opensans"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login4" />

</androidx.constraintlayout.widget.ConstraintLayout>